# busd

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
src/: bus.rs  config.rs  configuration.rs  fdo.rs  lib.rs  main.rs  match_rules.rs  name_registry.rs  peer.rs  peer_stream.rs  peers.rs  self_dial_conn.rs  tracing_subscriber.rs
src/bus/: cookies.rs  mod.rs
src/config/: bus_type.rs  limits.rs  mod.rs  policy.rs  rule.rs  xml.rs
src/configuration/: policy.rs  raw.rs
src/fdo/: dbus.rs  mod.rs  monitoring.rs
src/peer/: fdo.rs  mod.rs  monitor.rs  stream.rs
tests/: config.rs  configuration.rs  fdo.rs  greet.rs  monitor.rs  multiple_conns.rs
tests/data/: example-session-disable-stats.conf  example-system-enable-stats.conf  missing_include.conf  session.conf  system.conf  transitive_missing_include.conf  valid.conf  valid_included.conf
tests/data/includedir/: a.conf  not_included.xml
tests/data/valid-config-files/: basic.conf  session.conf
