[package]
name = "busd"
version = "0.1.0"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]
description = "A simple D-Bus bus (broker) implementation"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.70"
repository = "https://github.com/dbus2/busd"
keywords = ["D-Bus", "DBus", "IPC"]
categories = ["network-programming"]

[lib]
name = "busd"
path = "src/lib.rs"

[[bin]]
name = "busd"
path = "src/bin/busd.rs"

[dependencies]
#zbus = { git = "https://github.com/dbus2/zbus/", features = ["tokio"], default-features = false }
zbus = { version = "3.14.1", features = ["tokio"], default-features = false }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "signal", "tracing", "fs" ] }
clap = { version = "4.0.18", features = ["derive"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter" , "fmt", "ansi"], default-features = false, optional = true }
anyhow = "1.0.58"
# Explicitly depend on serde to enable `rc` feature.
serde = { version = "1.0.140", features = ["rc"] }
futures-util = "0.3.23"
enumflags2 = "0.7.0"
ntest = "0.9.0"
console-subscriber = { version = "0.1.8", optional = true }
hex = "0.4.3"
xdg-home = "1.0.0"
rand = "0.8.5"

[target.'cfg(unix)'.dependencies]
nix = "0.26.0"

[features]
default = ["tracing-subscriber"]
