[package]
name = "busd"
version = "0.2.0"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]
description = "A D-Bus bus (broker) implementation"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.74"
repository = "https://github.com/dbus2/busd"
keywords = ["D-Bus", "DBus", "IPC"]
categories = ["network-programming"]

[lib]
name = "busd"
path = "src/lib.rs"

[[bin]]
name = "busd"
path = "src/bin/busd.rs"

[dependencies]
zbus = { git = "https://github.com/dbus2/zbus/", features = ["tokio", "bus-impl"], default-features = false }
#zbus = { version = "4", features = ["tokio", "bus-impl"], default-features = false }
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "tracing",
    "fs",
] }
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "ansi",
], default-features = false, optional = true }
anyhow = "1.0.82"
# Explicitly depend on serde to enable `rc` feature.
serde = { version = "1.0.197", features = ["rc"] }
futures-util = "0.3.30"
enumflags2 = "0.7.9"
ntest = "0.9.2"
console-subscriber = { version = "0.2.0", optional = true }
hex = "0.4.3"
xdg-home = "1.1.0"
rand = "0.8.5"
event-listener = "5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", features = ["user"] }

[features]
default = ["tracing-subscriber"]

[profile.release]
lto = "fat"
