[package]
name = "busd"
version = "0.4.0"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]
description = "A D-Bus bus (broker) implementation"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.74"
repository = "https://github.com/dbus2/busd"
keywords = ["D-Bus", "DBus", "IPC"]
categories = ["network-programming"]
exclude = ["LICENSE"]

[lib]
name = "busd"
path = "src/lib.rs"

[[bin]]
name = "busd"
path = "src/bin/busd.rs"

[dependencies]
zbus = { git = "https://github.com/dbus2/zbus/", features = [
#zbus = { version = "5.0", features = [
    "tokio",
    "bus-impl",
], default-features = false }
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "tracing",
] }
clap = { version = "4.5.4", features = ["derive", "std", "help"], default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "ansi",
], default-features = false, optional = true }
anyhow = "1.0.82"
# Explicitly depend on serde to enable `rc` feature.
serde = { version = "1.0.200", features = ["rc"] }
futures-util = { version = "0.3.30", default-features = false }
enumflags2 = "0.7.9"
console-subscriber = { version = "0.4.0", optional = true }
xdg-home = "1.1.0"
event-listener = "5.3.0"
fastrand = "2.2.0"
quick-xml = { version = "0.37.0", features = ["serialize"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["user"] }

[features]
default = ["tracing-subscriber"]

[dev-dependencies]
ntest = "0.9.2"
rand = "0.8.5"

[profile.release]
lto = "fat"
codegen-units = 1
